--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,21 +23,51 @@
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="159dp"
-        android:layout_marginTop="97dp"
-        android:layout_marginEnd="162dp"
-        android:layout_marginBottom="413dp"
-        android:onClick="Click1"
-        android:text="@string/button"
+    <View
+        android:id="@+id/view5"
+        android:layout_width="451dp"
+        android:layout_height="100dp"
+        android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/startTitile" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+    <ImageView
+        android:id="@+id/homeIcon"
+        android:layout_width="97dp"
+        android:layout_height="105dp"
+        android:layout_marginEnd="148dp"
+        android:onClick="homeClick"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_home_black_24dp" />
+
+    <ImageView
+        android:id="@+id/WardrobeIcon"
+        android:layout_width="76dp"
+        android:layout_height="78dp"
+        android:layout_marginEnd="304dp"
+        android:layout_marginBottom="12dp"
+        android:onClick="wardrobeClick"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/kleiderschrank" />
+
+    <ImageView
+        android:id="@+id/ClothIcon"
+        android:layout_width="72dp"
+        android:layout_height="75dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="14dp"
+        android:onClick="fashMeClick"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/generateoutfit" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
