--- a/app/src/main/res/layout/activity_wardrobe.xml
+++ b/app/src/main/res/layout/activity_wardrobe.xml
@@ -44,36 +44,37 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+
     <ImageView
         android:id="@+id/homeIcon"
-        android:layout_width="76dp"
-        android:layout_height="78dp"
-        android:layout_marginEnd="168dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="97dp"
+        android:layout_height="105dp"
+        android:layout_marginEnd="148dp"
         android:onClick="homeClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_home_black_24dp" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/WardrobeIcon"
         android:layout_width="76dp"
         android:layout_height="78dp"
-        android:layout_marginEnd="300dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="304dp"
+        android:layout_marginBottom="12dp"
+        android:onClick="wardrobeClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="?attr/actionModeCloseDrawable" />
+        app:srcCompat="@drawable/kleiderschrank" />
 
     <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="76dp"
-        android:layout_height="78dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="16dp"
+        android:id="@+id/ClothIcon"
+        android:layout_width="72dp"
+        android:layout_height="75dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="14dp"
+        android:onClick="fashMeClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_dashboard_black_24dp" />
-
+        app:srcCompat="@drawable/generateoutfit" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
