--- a/app/src/main/res/layout/activity_create_cloth.xml
+++ b/app/src/main/res/layout/activity_create_cloth.xml
@@ -7,6 +7,21 @@
     android:background="@drawable/gradient_first"
     tools:context=".CreateClothActivity">
 
+    <TextView
+        android:id="@+id/titel"
+        android:layout_width="258dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="117dp"
+        android:text="Add Clothes to your wardrobe"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <View
         android:id="@+id/view5"
         android:layout_width="451dp"
@@ -48,5 +63,72 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/generateoutfit" />
+
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="328dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="41dp"
+        android:layout_marginTop="28dp"
+        android:backgroundTint="#FFFFFF"
+        android:background="#FFFFFF"
+        android:hint="Enter Description Here"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titel" />
+
+    <Spinner
+        android:id="@+id/type"
+        android:layout_width="325dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="42dp"
+        android:background="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText" />
+
+    <Spinner
+        android:id="@+id/style"
+        android:layout_width="325dp"
+        android:layout_height="25dp"
+        android:background="#FFFFFF"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="112dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText"
+        />
+
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="41dp"
+        android:layout_marginTop="41dp"
+        android:text="Waterproof"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/style" />
+
+    <com.google.android.material.slider.Slider
+        android:id="@+id/slider"
+        android:layout_width="329dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="41dp"
+        android:layout_marginTop="39dp"
+        android:stepSize="1.0"
+        android:valueFrom="-10.0"
+        android:valueTo="45.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switch1" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="193dp"
+        android:layout_height="67dp"
+        android:layout_marginStart="108dp"
+        android:layout_marginTop="24dp"
+        android:text="Add To Wardrobe"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/slider" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
