--- a/app/src/main/res/layout/activity_create_cloth.xml
+++ b/app/src/main/res/layout/activity_create_cloth.xml
@@ -69,11 +69,10 @@
         android:id="@+id/editText"
         android:layout_width="328dp"
         android:layout_height="80dp"
-        android:layout_marginStart="41dp"
-        android:layout_marginTop="28dp"
-        android:backgroundTint="#FFFFFF"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="48dp"
         android:background="#FFFFFF"
-        android:hint="Enter Description Here"
+        android:backgroundTint="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titel" />
 
@@ -81,8 +80,8 @@
         android:id="@+id/type"
         android:layout_width="325dp"
         android:layout_height="25dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="64dp"
         android:background="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText" />
@@ -91,21 +90,20 @@
         android:id="@+id/style"
         android:layout_width="325dp"
         android:layout_height="25dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="148dp"
         android:background="#FFFFFF"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="112dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
-        />
-
+        app:layout_constraintTop_toBottomOf="@+id/editText" />
 
     <Switch
         android:id="@+id/switch1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="41dp"
-        android:layout_marginTop="41dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="13dp"
         android:text="Waterproof"
+        android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/style" />
 
@@ -113,22 +111,66 @@
         android:id="@+id/slider"
         android:layout_width="329dp"
         android:layout_height="46dp"
-        android:layout_marginStart="41dp"
-        android:layout_marginTop="39dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginBottom="75dp"
         android:stepSize="1.0"
         android:valueFrom="-10.0"
         android:valueTo="45.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch1" />
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="193dp"
         android:layout_height="67dp"
         android:layout_marginStart="108dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginBottom="57dp"
         android:text="Add To Wardrobe"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/slider" />
+        app:layout_constraintBottom_toTopOf="@+id/view5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginBottom="10dp"
+        android:text="Description"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/editText"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginBottom="10dp"
+        android:text="Type"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/type"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginBottom="10dp"
+        android:text="Dress Code"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/style"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginBottom="10dp"
+        android:text="Temperature"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/slider"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
