--- a/app/src/main/res/layout/activity_rewiev_outfit.xml
+++ b/app/src/main/res/layout/activity_rewiev_outfit.xml
@@ -49,4 +49,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/generateoutfit" />
 
+    <ImageView
+        android:id="@+id/PersonIcon"
+        android:layout_width="482dp"
+        android:layout_height="591dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="88dp"
+        android:onClick="wardrobeClick"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/personen" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
