--- a/app/src/main/res/layout/activity_create_cloth.xml
+++ b/app/src/main/res/layout/activity_create_cloth.xml
@@ -66,7 +66,7 @@
 
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/editTextDescription"
         android:layout_width="328dp"
         android:layout_height="80dp"
         android:layout_marginStart="36dp"
@@ -77,24 +77,24 @@
         app:layout_constraintTop_toBottomOf="@+id/titel" />
 
     <Spinner
-        android:id="@+id/type"
+        android:id="@+id/typeCreate"
         android:layout_width="325dp"
         android:layout_height="25dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="64dp"
         android:background="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />
 
     <Spinner
-        android:id="@+id/style"
+        android:id="@+id/styleCreate"
         android:layout_width="325dp"
         android:layout_height="25dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="148dp"
         android:background="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />
 
     <Switch
         android:id="@+id/switch1"
@@ -105,7 +105,7 @@
         android:text="Waterproof"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/style" />
+        app:layout_constraintTop_toBottomOf="@+id/styleCreate" />
 
     <com.google.android.material.slider.Slider
         android:id="@+id/slider"
@@ -125,6 +125,7 @@
         android:layout_height="67dp"
         android:layout_marginStart="108dp"
         android:layout_marginBottom="57dp"
+        android:onClick="addToWardrobeClick"
         android:text="Add To Wardrobe"
         app:layout_constraintBottom_toTopOf="@+id/view5"
         app:layout_constraintStart_toStartOf="parent" />
@@ -137,7 +138,7 @@
         android:layout_marginBottom="10dp"
         android:text="Description"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/editText"
+        app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -148,7 +149,7 @@
         android:layout_marginBottom="10dp"
         android:text="Type"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/type"
+        app:layout_constraintBottom_toTopOf="@+id/typeCreate"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -159,7 +160,7 @@
         android:layout_marginBottom="10dp"
         android:text="Dress Code"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/style"
+        app:layout_constraintBottom_toTopOf="@+id/styleCreate"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
