--- a/app/src/main/res/layout/activity_wardrobe.xml
+++ b/app/src/main/res/layout/activity_wardrobe.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     android:background="@drawable/gradient_first">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewClothes"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/titel"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:listitem="@layout/clothing_list_item"/>
 
     <TextView
         android:id="@+id/titel"
@@ -32,16 +41,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="358dp"
-        android:layout_height="434dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="19dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/titel"
-        tools:layout_editor_absoluteX="27dp" />
 
     <View
         android:id="@+id/view5"
