--- a/app/src/main/res/layout/clothing_list_item.xml
+++ b/app/src/main/res/layout/clothing_list_item.xml
@@ -4,10 +4,11 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textViewItem"
-        android:layout_width="match_parent"
+        android:id="@+id/descriptionTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        android:textColor="@android:color/black"
+        android:padding="8dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
