--- a/app/src/main/res/layout/activity_create_cloth.xml
+++ b/app/src/main/res/layout/activity_create_cloth.xml
@@ -174,4 +174,16 @@
         app:layout_constraintBottom_toTopOf="@+id/slider"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/textViewError"
+        android:layout_width="344dp"
+        android:layout_height="68dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginBottom="48dp"
+        android:text=""
+        android:textColor="	#f00"
+        android:textSize="28dp"
+        app:layout_constraintBottom_toTopOf="@+id/slider"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
