--- a/app/src/main/res/layout/activity_rewiev_outfit.xml
+++ b/app/src/main/res/layout/activity_rewiev_outfit.xml
@@ -90,7 +90,7 @@
         android:layout_height="40dp"
         android:layout_marginEnd="140dp"
         android:layout_marginBottom="632dp"
-        android:text="TextView"
+        android:text=""
         android:textColor="@color/white"
         android:textSize="20dp"
         android:textAlignment="center"
@@ -99,38 +99,38 @@
 
     <TextView
         android:id="@+id/textViewFace"
-        android:layout_width="127dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="140dp"
-        android:layout_marginBottom="584dp"
-        android:text="TextView"
+        android:layout_width="128dp"
+        android:layout_height="58dp"
+        android:layout_marginEnd="136dp"
+        android:layout_marginBottom="552dp"
+        android:text=""
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20dp"
-        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textViewTursor"
-        android:layout_width="127dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="140dp"
-        android:layout_marginBottom="484dp"
-        android:text="TextView"
+        android:layout_width="131dp"
+        android:layout_height="80dp"
+        android:layout_marginEnd="136dp"
+        android:layout_marginBottom="448dp"
+        android:text=""
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20dp"
-        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textViewLeg"
-        android:layout_width="127dp"
-        android:layout_height="40dp"
+        android:layout_width="136dp"
+        android:layout_height="70dp"
         android:layout_marginEnd="140dp"
-        android:layout_marginBottom="344dp"
+        android:layout_marginBottom="324dp"
+        android:text=""
         android:textAlignment="center"
-        android:text="TextView"
         android:textColor="@color/white"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -138,11 +138,11 @@
 
     <TextView
         android:id="@+id/textViewFeet"
-        android:layout_width="127dp"
-        android:layout_height="40dp"
+        android:layout_width="133dp"
+        android:layout_height="71dp"
         android:layout_marginEnd="140dp"
-        android:layout_marginBottom="256dp"
-        android:text="TextView"
+        android:layout_marginBottom="220dp"
+        android:text=""
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20dp"
