--- a/app/src/main/res/layout/activity_rewiev_outfit.xml
+++ b/app/src/main/res/layout/activity_rewiev_outfit.xml
@@ -66,8 +66,7 @@
         android:layout_height="507dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="200dp"
-        android:alpha="0.6"
-        android:onClick="wardrobeClick"
+        android:alpha="0.5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/personen" />
@@ -76,9 +75,9 @@
         android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="836dp"
-        android:text="Heres your outfit of the day"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="784dp"
+        android:text="Here's your outfit of the day"
         android:textColor="@color/white"
         android:textSize="28dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -99,9 +98,9 @@
 
     <TextView
         android:id="@+id/textViewFace"
-        android:layout_width="128dp"
+        android:layout_width="127dp"
         android:layout_height="58dp"
-        android:layout_marginEnd="136dp"
+        android:layout_marginEnd="140dp"
         android:layout_marginBottom="552dp"
         android:text=""
         android:textAlignment="center"
@@ -112,9 +111,9 @@
 
     <TextView
         android:id="@+id/textViewTursor"
-        android:layout_width="131dp"
+        android:layout_width="127dp"
         android:layout_height="80dp"
-        android:layout_marginEnd="136dp"
+        android:layout_marginEnd="140dp"
         android:layout_marginBottom="448dp"
         android:text=""
         android:textAlignment="center"
@@ -125,7 +124,7 @@
 
     <TextView
         android:id="@+id/textViewLeg"
-        android:layout_width="136dp"
+        android:layout_width="127dp"
         android:layout_height="70dp"
         android:layout_marginEnd="140dp"
         android:layout_marginBottom="324dp"
@@ -138,7 +137,7 @@
 
     <TextView
         android:id="@+id/textViewFeet"
-        android:layout_width="133dp"
+        android:layout_width="127dp"
         android:layout_height="71dp"
         android:layout_marginEnd="140dp"
         android:layout_marginBottom="220dp"
@@ -148,5 +147,57 @@
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewOrt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="300dp"
+        android:layout_marginBottom="728dp"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:textFontWeight="800"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewGrad"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="300dp"
+        android:layout_marginBottom="701dp"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewRegen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="300dp"
+        android:layout_marginBottom="673dp"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewStyle"
+        android:layout_width="165dp"
+        android:layout_height="126dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="628dp"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="35dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
