--- a/app/src/main/res/layout/activity_rewiev_outfit.xml
+++ b/app/src/main/res/layout/activity_rewiev_outfit.xml
@@ -192,7 +192,7 @@
         android:layout_height="126dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="628dp"
-        android:text="TextView"
+        android:text=""
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="35dp"
