--- a/app/src/main/res/layout/activity_rewiev_outfit.xml
+++ b/app/src/main/res/layout/activity_rewiev_outfit.xml
@@ -77,9 +77,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="36dp"
         android:layout_marginBottom="784dp"
-        android:text="Here's your outfit of the day"
+        android:text="Here's your outfit of the day!"
         android:textColor="@color/white"
-        android:textSize="28dp"
+        android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -87,11 +87,11 @@
         android:id="@+id/textViewHead"
         android:layout_width="127dp"
         android:layout_height="40dp"
-        android:layout_marginEnd="140dp"
+        android:layout_marginEnd="145dp"
         android:layout_marginBottom="632dp"
         android:text=""
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -100,12 +100,12 @@
         android:id="@+id/textViewFace"
         android:layout_width="127dp"
         android:layout_height="58dp"
-        android:layout_marginEnd="140dp"
+        android:layout_marginEnd="145dp"
         android:layout_marginBottom="552dp"
         android:text=""
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -113,12 +113,12 @@
         android:id="@+id/textViewTursor"
         android:layout_width="127dp"
         android:layout_height="80dp"
-        android:layout_marginEnd="140dp"
+        android:layout_marginEnd="145dp"
         android:layout_marginBottom="448dp"
         android:text=""
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -126,12 +126,12 @@
         android:id="@+id/textViewLeg"
         android:layout_width="127dp"
         android:layout_height="70dp"
-        android:layout_marginEnd="140dp"
+        android:layout_marginEnd="145dp"
         android:layout_marginBottom="324dp"
         android:text=""
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -139,35 +139,35 @@
         android:id="@+id/textViewFeet"
         android:layout_width="127dp"
         android:layout_height="71dp"
-        android:layout_marginEnd="140dp"
+        android:layout_marginEnd="145dp"
         android:layout_marginBottom="220dp"
         android:text=""
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textViewOrt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="300dp"
-        android:layout_marginBottom="728dp"
+        android:layout_width="257dp"
+        android:layout_height="29dp"
+        android:layout_marginEnd="76dp"
+        android:layout_marginBottom="744dp"
         android:text=""
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20dp"
         android:textFontWeight="800"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textViewGrad"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="300dp"
-        android:layout_marginBottom="701dp"
+        android:layout_width="60dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="175dp"
+        android:layout_marginBottom="720dp"
         android:text=""
         android:textAlignment="center"
         android:textColor="@color/white"
@@ -176,10 +176,10 @@
 
     <TextView
         android:id="@+id/textViewRegen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="300dp"
-        android:layout_marginBottom="673dp"
+        android:layout_width="63dp"
+        android:layout_height="37dp"
+        android:layout_marginEnd="172dp"
+        android:layout_marginBottom="688dp"
         android:text=""
         android:textAlignment="center"
         android:textColor="@color/white"
@@ -190,12 +190,12 @@
         android:id="@+id/textViewStyle"
         android:layout_width="165dp"
         android:layout_height="126dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="628dp"
+        android:layout_marginEnd="125dp"
+        android:layout_marginBottom="88dp"
         android:text=""
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="35dp"
+        android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
